[gd_scene load_steps=6 format=3 uid="uid://b8vxnan0p1qrs"]

[ext_resource type="Script" path="res://ui/BossHealthUI.gd" id="1_boss_ui"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.8, 0.8, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.2, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.8, 0.2, 0.2, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
font_color = Color(1, 1, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="BossHealthUI" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_right = 200.0
offset_bottom = 100.0
script = ExtResource("1_boss_ui")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture_filter = 1
texture = SubResource("StyleBoxFlat_1")

[node name="BossName" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 40.0
text = "GIANT BOSS"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -180.0
offset_top = 45.0
offset_right = 180.0
offset_bottom = 65.0
theme_override_styles/background = SubResource("StyleBoxFlat_2")
theme_override_styles/fill = SubResource("StyleBoxFlat_3")
value = 100.0
show_percentage = false

[node name="PhaseIndicator" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 70.0
offset_right = 100.0
offset_bottom = 90.0
text = "PHASE 1: WALKING"
horizontal_alignment = 1

[node name="DamageCounter" type="Label" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_top = 45.0
offset_right = -10.0
offset_bottom = 65.0
text = "0/5"
horizontal_alignment = 1
vertical_alignment = 1